Added 004 and updated poster sections

--- a/index.html
+++ b/index.html
@@ -84,10 +84,11 @@
 <a name="videolist"></a><h2>VIDEO LIST</h2>
 <table class="w-full">
 <tr><th>Code</th><th>Published</th><th>Phrasal verbs covered and link to the video</th><th>Poster</th></tr>
-<!--<tr><td><span style="color: #124292;">004</span></td><td>02<span class="superscript">nd</span> Oct</td><td><a href="https://youtu.be/xBXb4oDXRuA">Break Up With, Get On With, Fall Out With, Make Up With</a></td></tr>-->
-<tr><td style="vertical-align:middle"><span style="color: #124292;">004</span></td><td style="vertical-align:middle">09<span class="superscript">th</span> Oct</td><td style="vertical-align:middle"><!--<a href="https://youtu.be/xBXb4oDXRuA">-->Break Up With, Get On With, Fall Out With, Make Up With<!--</a>--></td><td><a href="https://imgbox.com/g1IiGYpL" ><img src="https://images2.imgbox.com/0e/84/g1IiGYpL_o.jpg" alt="image host"/></a></td></tr>
-<tr><td style="vertical-align:middle"><span style="color: #124292;">003</span></td><td style="vertical-align:middle">02<span class="superscript">nd</span> Oct</td><td style="vertical-align:middle"><a href="https://youtu.be/xBXb4oDXRuA">Cut Out, Cut Down On, Eat Out, Live On</a></td><td><a href="https://drive.google.com/file/d/1OvX_VG93mJMWC9OrokaJOVAKtgegJMtf/view?usp=sharing" ><img src="https://images2.imgbox.com/03/f8/pjha73nh_o.png" alt="Learn English Phrasal Verbs"/></a></td></tr>
-<tr><td style="vertical-align:middle"><span style="color: #124292;">002</span></td><td style="vertical-align:middle">25<span class="superscript">th</span> Sep</td><td style="vertical-align:middle"><a href="https://youtu.be/0AFQ04Lj52c">Turn on, Turn Off, Turn Up & Turn Down</a></td><td><a href="https://imgbox.com/g1IiGYpL" ><img src="https://images2.imgbox.com/0e/84/g1IiGYpL_o.jpg" alt="image host"/></a></td></tr>
+<!--
+<tr><td style="vertical-align:middle"><span style="color: #124292;">005</span></td><td style="vertical-align:middle">16<span class="superscript">th</span> Oct</td><td style="vertical-align:middle"><a href="https://youtu.be/NR6uvgMb1Gc">Figure Out, Focus On, Run Into, Sort Out</a></td><td><a href="https://bit.ly/3nCKXfJ" ><img src="https://images2.imgbox.com/27/a7/Ej1c32VF_o.jpg" alt="Learn English Phrasal Verbs"/></a></td></tr>-->
+<tr><td style="vertical-align:middle"><span style="color: #124292;">004</span></td><td style="vertical-align:middle">09<span class="superscript">th</span> Oct</td><td style="vertical-align:middle"><a href="https://youtu.be/Ug2EKbfZWAA">Break Up With, Get On With, Fall Out With, Make Up With</a></td><td><a href="https://bit.ly/2IdddVT" ><img src="https://images2.imgbox.com/f1/d0/Nyev0K7U_o.jpg" alt="Learn English Phrasal Verbs"/></a></td></tr>
+<tr><td style="vertical-align:middle"><span style="color: #124292;">003</span></td><td style="vertical-align:middle">02<span class="superscript">nd</span> Oct</td><td style="vertical-align:middle"><a href="https://youtu.be/xBXb4oDXRuA">Cut Out, Cut Down On, Eat Out, Live On</a></td><td><a href="https://bit.ly/3dhi0RD" ><img src="https://images2.imgbox.com/e5/28/TzV96rsK_o.jpg" alt="Learn English Phrasal Verbs"/></a></td></tr>
+<tr><td style="vertical-align:middle"><span style="color: #124292;">002</span></td><td style="vertical-align:middle">25<span class="superscript">th</span> Sep</td><td style="vertical-align:middle"><a href="https://youtu.be/0AFQ04Lj52c">Turn on, Turn Off, Turn Up & Turn Down</a></td><td>Coming Soon</td></tr>
 <tr><td><span style="color: #124292;">001</span></td><td>25<span class="superscript">th</span> Sep</td><td><a href="https://youtu.be/kkzQXQBHm3Q">A Basic Introduction to Phrasal Verbs</a></td><td>No poster</td></tr>
 <tr><td><span style="color: #124292;">000</span></td><td>25<span class="superscript">th</span> Sep</td><td><a href="https://youtu.be/K6lY1XawDOM">About Me, This Channel and The Videos</a></td><td>No poster</td></tr>
 </table>
@@ -99,13 +100,18 @@
 <p><a href="https://www.youtube.com/playlist?list=PLGjNwsRMbl32lMrtfpChNxtZ4QQqBXzET">Turn</a></p>
 <hr class="grey">
 <a name="phrasalverbslist"></a><h2>PHRASAL VERBS LIST</h2>
-<p>Jump to a letter:<br><a href="">A</a>  <a href="">B</a>  <a href="#C">C</a>  <a href="">D</a>  <a href="#E">E</a>  <a href="">F</a> <a href="">G</a>  <a href="">H</a>  <a href="">I</a>  <a href="">J</a>  <a href="">K</a>  <a href="~L">L</a>  <a href="">M</a>  <a href="">N</a>  <a href="">O</a>  <a href="">P</a>  <a href="">Q</a>  <a href="">R</a>  <a href="">S</a>  <a href="#T">T</a>  <a href="">U</a>  <a href="">V</a>  <a href="">W</a>  <a href="">X</a>  <a href="">Y</a>  <a href="">Z</a>  </p> 
+<p>Jump to a letter:<br><a href="">A</a>  <a href="#B">B</a>  <a href="#C">C</a>  <a href="">D</a>  <a href="#E">E</a>  <a href="#F">F</a> <a href="#G">G</a>  <a href="">H</a>  <a href="">I</a>  <a href="">J</a>  <a href="">K</a>  <a href="~L">L</a>  <a href="">M</a>  <a href="">N</a>  <a href="">O</a>  <a href="">P</a>  <a href="">Q</a>  <a href="">R</a>  <a href="">S</a>  <a href="#T">T</a>  <a href="">U</a>  <a href="">V</a>  <a href="">W</a>  <a href="">X</a>  <a href="">Y</a>  <a href="">Z</a>  </p> 
 <table class="w-full">
 <tr><th>Verb</th><th>Basic Defintion</th><th>Link to Video & Code</th></tr>
+<tr><td><A NAME="B"></a>Break Up With</td><td>To stop being in a romantic relationship.</td><td><a href="https://youtu.be/Ug2EKbfZWAA">004</a></td></tr>
+
 <tr><td><A NAME="C"></a>Cut Down on</td><td>To reduce the quantity of something.</td><td><a href="https://youtu.be/xBXb4oDXRuA">003</a></td></tr>
 <tr><td>Cut Out</td><td>To remove something completely.</td><td><a href="https://youtu.be/xBXb4oDXRuA">003</a></td></tr>
 <tr><td><A NAME="E"></a>Eat Out</td><td>To eat outside of the home, in a restaurant for example.</td><td><a href="https://youtu.be/xBXb4oDXRuA">003</a></td></tr>
+<tr><td><A NAME="F"></a>Fall Out With</td><td>To stop being friends with or being friendly with somebody.</td><td><a href="https://youtu.be/Ug2EKbfZWAA">004</a></td></tr>
+<tr><td><A NAME="G"></a>Get On With</td><td>To have a good or friendly relationship with somebody.</td><td><a href="https://youtu.be/Ug2EKbfZWAA">004</a></td></tr>
 <tr><td><A NAME="L"></a>Live On</td><td>To consume mostly one type of food.</td><td><a href="https://youtu.be/xBXb4oDXRuA">003</a></td></tr>
+<tr><td><A NAME="M"></a>Make Up With</td><td>To become friends with or being friendly with somebody after a period of non-friendship.</td><td><a href="https://youtu.be/Ug2EKbfZWAA">004</a></td></tr>
 <tr><td><A NAME="T"></a>Turn Down</td><td>To decrease the intensity, especially sound.</td><td><a href="https://youtu.be/0AFQ04Lj52c">002</a></td></tr>
 <tr><td>Turn Off</td><td>To stop a piece of equipment, for example electrical or plumbing.</td><td><a href="https://youtu.be/0AFQ04Lj52c">002</a></td></tr>
 <tr><td>Turn On</td><td>To start a piece of equipment, for example electrical or plumbing.</td><td><a href="https://youtu.be/0AFQ04Lj52c">002</a></td></tr>
