Added all internal letter links

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 <p><a href="https://www.youtube.com/playlist?list=PLGjNwsRMbl32lMrtfpChNxtZ4QQqBXzET">Turn</a></p>
 <hr class="grey">
 <a name="phrasalverbslist"></a><h2>PHRASAL VERBS LIST</h2>
-<p>Jump to a letter:<br><a href="">A</a>  <a href="#B">B</a>  <a href="#C">C</a>  <a href="">D</a>  <a href="#E">E</a>  <a href="#F">F</a> <a href="#G">G</a>  <a href="">H</a>  <a href="">I</a>  <a href="">J</a>  <a href="">K</a>  <a href="~L">L</a>  <a href="">M</a>  <a href="">N</a>  <a href="">O</a>  <a href="">P</a>  <a href="">Q</a>  <a href="">R</a>  <a href="">S</a>  <a href="#T">T</a>  <a href="">U</a>  <a href="">V</a>  <a href="">W</a>  <a href="">X</a>  <a href="">Y</a>  <a href="">Z</a>  </p> 
+<p>Jump to a letter:<br><a href="#A">A</a>  <a href="#B">B</a>  <a href="#C">C</a>  <a href="#D">D</a>  <a href="#E">E</a>  <a href="#F">F</a> <a href="#G">G</a>  <a href="#H">H</a>  <a href="#I">I</a>  <a href="#J">J</a>  <a href="#K">K</a>  <a href="#L">L</a>  <a href="#M">M</a>  <a href="#N">N</a>  <a href="#O">O</a>  <a href="#P">P</a>  <a href="#Q">Q</a>  <a href="#R">R</a>  <a href="#S">S</a>  <a href="#T">T</a>  <a href="#U">U</a>  <a href="#V">V</a>  <a href="#W">W</a>  <a href="#X">X</a>  <a href="#Y">Y</a>  <a href="#Z">Z</a>  </p> 
 <table class="w-full">
 <tr><th>Verb</th><th>Basic Defintion</th><th>Link to Video & Code</th></tr>
 <tr><td><A NAME="B"></a>Break Up With</td><td>To stop being in a romantic relationship.</td><td><a href="https://youtu.be/Ug2EKbfZWAA">004</a></td></tr>
