--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 <hr class="grey">
 <a name="videolist"></a><h2>VIDEO LIST</h2>
 <table class="w-full">
-<tr><th>Code</th><th>Published</th><th>Phrasal verbs covered<br>and link to the video</th><th>Poster</th></tr>
+<tr><th>Video Code</th><th>Published</th><th>Phrasal verbs covered<br>and link to the video</th><th>Poster</th></tr>
 <tr><td style="vertical-align:middle"><span style="color: #124292;">007</span></td><td style="vertical-align:middle">31<span class="superscript">st</span> Oct</td><td style="vertical-align:middle"><a href="https://youtu.be/_aHY30FL3aI">Look Up To</a><br><a href="https://youtu.be/_aHY30FL3aI">Look Down On</a><br><a href="https://youtu.be/_aHY30FL3aI">Look Forward To</a><br><a href="https://youtu.be/_aHY30FL3aI">Look Through</a></td><td><a href="https://bit.ly/2JxT1yQ" ><img src="pdf-icon-512.png" alt="Learn English Phrasal Verbs"/></a></td></tr>
 <tr><td style="vertical-align:middle"><span style="color: #124292;">006</span></td><td style="vertical-align:middle">23<span class="superscript">rd</span> Oct</td><td style="vertical-align:middle"><a href="https://youtu.be/IcI049Yr63I">QUAD QUIZ ONE</a></td><td>No poster</td></tr>
 <tr><td style="vertical-align:middle"><span style="color: #124292;">005</span></td><td style="vertical-align:middle">16<span class="superscript">th</span> Oct</td><td style="vertical-align:middle"><a href="https://youtu.be/NR6uvgMb1Gc">Figure Out</a><br><a href="https://youtu.be/NR6uvgMb1Gc">Focus On</a><br><a href="https://youtu.be/NR6uvgMb1Gc">Run Into</a><br><a href="https://youtu.be/NR6uvgMb1Gc">Sort Out</a></td><td><a href="https://bit.ly/3nCKXfJ" ><img src="https://images2.imgbox.com/27/a7/Ej1c32VF_o.jpg" alt="Learn English Phrasal Verbs"/></a></td></tr>
