lots of little updates.

--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
 <hr class="grey">
 
 <h3 style="margin-bottom: -5px;">MENU</h3>
-<ul class="menulist compact">
+<ul class="menulist">
 <li><a href="#videolist">VIDEO LIST</a></li>
 <li><a href="#playlists">PLAYLISTS</a></li>
 <li><a href="#phrasalverbslist">PHRASAL VERBS LIST</a></li>
-<li><a href="javascript:randomvideo()">FEELING LUCKY?</a></li>
+<li><a href="javascript:randomvideo()" alt="[opens a random 4PV video on YouTube]" title="[opens a random 4PV video on YouTube]">FEELING LUCKY?</a><br>[Open a random 4PV video]</li>
 </ul>
 <hr class="grey">
 <h3 style="margin-bottom: -5px;">SOCIAL MEDIA</h3>
-<ul class="menulist compact">
+<ul class="menulist">
 <li><a href="https://www.youtube.com/channel/UC3El1sltq5I1BUJiByctd9Q">YOUTUBE</a></li>
 <li><a href="https://www.instagram.com/4phrasalverbs/">INSTAGRAM</a></li>
 <li><a href="https://twitter.com/4phrasalverbs">TWITTER</a></li>
@@ -82,41 +82,43 @@
 </div>
 <hr class="grey">
 <a name="videolist"></a><h2>VIDEO LIST</h2>
-<table class="w-full">
+<table class="w-full" style="vertical-align:middle">
 <tr><th>Video Code</th><th>Published</th><th>Phrasal verbs covered<br>and link to the video</th><th>Poster</th></tr>
-<tr><td style="vertical-align:middle"><span style="color: #124292;">007</span></td><td style="vertical-align:middle">31<span class="superscript">st</span> Oct</td><td style="vertical-align:middle"><a href="https://youtu.be/_aHY30FL3aI">Look Up To</a><br><a href="https://youtu.be/_aHY30FL3aI">Look Down On</a><br><a href="https://youtu.be/_aHY30FL3aI">Look Forward To</a><br><a href="https://youtu.be/_aHY30FL3aI">Look Through</a></td><td style="vertical-align:middle" ><a href="https://bit.ly/38478WQ" ><img class="responsive" src="pdf-icon-512.png" alt="Learn English Phrasal Verbs: Poster 007"/></a></td></tr>
+<tr><td style="vertical-align:middle"><span style="color: #124292;">007</span></td><td style="vertical-align:middle">31<span class="superscript">st</span> Oct</td><td style="vertical-align:middle"><a href="https://youtu.be/_aHY30FL3aI">Look Up To</a><br><a href="https://youtu.be/_aHY30FL3aI">Look Down On</a><br><a href="https://youtu.be/_aHY30FL3aI">Look Forward To</a><br><a href="https://youtu.be/_aHY30FL3aI">Look Through</a></td><td style="vertical-align:middle" ><a href="https://bit.ly/38478WQ" ><img width="60" src="pdf-icon-512.png" alt="Learn English Phrasal Verbs: Poster 007"/></a></td></tr>
 <tr><td style="vertical-align:middle"><span style="color: #124292;">006</span></td><td style="vertical-align:middle">23<span class="superscript">rd</span> Oct</td><td style="vertical-align:middle"><a href="https://youtu.be/IcI049Yr63I">QUAD QUIZ ONE</a></td><td>No poster</td></tr>
-<tr><td style="vertical-align:middle"><span style="color: #124292;">005</span></td><td style="vertical-align:middle">16<span class="superscript">th</span> Oct</td><td style="vertical-align:middle"><a href="https://youtu.be/NR6uvgMb1Gc">Figure Out</a><br><a href="https://youtu.be/NR6uvgMb1Gc">Focus On</a><br><a href="https://youtu.be/NR6uvgMb1Gc">Run Into</a><br><a href="https://youtu.be/NR6uvgMb1Gc">Sort Out</a></td><td><a href="https://bit.ly/3mNRWkN" ><img class="responsive" src="pdf-icon-512.png" alt="Learn English Phrasal Verbs: Poster 005"/></a></td></tr>
-<tr><td style="vertical-align:middle"><span style="color: #124292;">004</span></td><td style="vertical-align:middle">09<span class="superscript">th</span> Oct</td><td style="vertical-align:middle"><a href="https://youtu.be/Ug2EKbfZWAA">Break Up With</a><br><a href="https://youtu.be/Ug2EKbfZWAA">Get On With</a><br><a href="https://youtu.be/Ug2EKbfZWAA">Fall Out With</a><br><a href="https://youtu.be/Ug2EKbfZWAA">Make Up With</a></td><td><a href="https://bit.ly/3n0sqsP" ><img class="responsive" src="pdf-icon-512.png" alt="Learn English Phrasal Verbs: Poster 004"/></a></td></tr>
-<tr><td style="vertical-align:middle"><span style="color: #124292;">003</span></td><td style="vertical-align:middle">02<span class="superscript">nd</span> Oct</td><td style="vertical-align:middle"><a href="https://youtu.be/xBXb4oDXRuA">Cut Out</a><br><a href="https://youtu.be/xBXb4oDXRuA">Down On</a><br><a href="https://youtu.be/xBXb4oDXRuA">Eat Out</a><br><a href="https://youtu.be/xBXb4oDXRuA">Live On</a></td><td><a href="https://bit.ly/34TPRxz" ><img class="responsive" src="pdf-icon-512.png" alt="Learn English Phrasal Verbs: Poster 003"/></a></td></tr>
-<tr><td style="vertical-align:middle"><span style="color: #124292;">002</span></td><td style="vertical-align:middle">25<span class="superscript">th</span> Sep</td><td style="vertical-align:middle"><a href="https://youtu.be/0AFQ04Lj52c">Turn on</a><br><a href="https://youtu.be/0AFQ04Lj52c">Turn Off</a><br><a href="https://youtu.be/0AFQ04Lj52c">Turn Up</a><br><a href="https://youtu.be/0AFQ04Lj52c">Turn Down</a><br></td><td><a href="https://bit.ly/3627L0f" ><img class="responsive" src="pdf-icon-512.png" alt="Learn English Phrasal Verbs: Poster 002"/></a></td></tr>
+<tr><td style="vertical-align:middle"><span style="color: #124292;">005</span></td><td style="vertical-align:middle">16<span class="superscript">th</span> Oct</td><td style="vertical-align:middle"><a href="https://youtu.be/NR6uvgMb1Gc">Figure Out</a><br><a href="https://youtu.be/NR6uvgMb1Gc">Focus On</a><br><a href="https://youtu.be/NR6uvgMb1Gc">Run Into</a><br><a href="https://youtu.be/NR6uvgMb1Gc">Sort Out</a></td><td style="vertical-align:middle"><a href="https://bit.ly/3mNRWkN" ><img width="60" src="pdf-icon-512.png" alt="Learn English Phrasal Verbs: Poster 005"/></a></td></tr>
+<tr><td style="vertical-align:middle"><span style="color: #124292;">004</span></td><td style="vertical-align:middle">09<span class="superscript">th</span> Oct</td><td style="vertical-align:middle"><a href="https://youtu.be/Ug2EKbfZWAA">Break Up With</a><br><a href="https://youtu.be/Ug2EKbfZWAA">Get On With</a><br><a href="https://youtu.be/Ug2EKbfZWAA">Fall Out With</a><br><a href="https://youtu.be/Ug2EKbfZWAA">Make Up With</a></td><td style="vertical-align:middle"><a href="https://bit.ly/3n0sqsP" ><img width="60" src="pdf-icon-512.png" alt="Learn English Phrasal Verbs: Poster 004"/></a></td></tr>
+<tr><td style="vertical-align:middle"><span style="color: #124292;">003</span></td><td style="vertical-align:middle">02<span class="superscript">nd</span> Oct</td><td style="vertical-align:middle"><a href="https://youtu.be/xBXb4oDXRuA">Cut Out</a><br><a href="https://youtu.be/xBXb4oDXRuA">Down On</a><br><a href="https://youtu.be/xBXb4oDXRuA">Eat Out</a><br><a href="https://youtu.be/xBXb4oDXRuA">Live On</a></td><td style="vertical-align:middle"><a href="https://bit.ly/34TPRxz" ><img width="60" src="pdf-icon-512.png" alt="Learn English Phrasal Verbs: Poster 003"/></a></td></tr>
+<tr><td style="vertical-align:middle"><span style="color: #124292;">002</span></td><td style="vertical-align:middle">25<span class="superscript">th</span> Sep</td><td style="vertical-align:middle"><a href="https://youtu.be/0AFQ04Lj52c">Turn on</a><br><a href="https://youtu.be/0AFQ04Lj52c">Turn Off</a><br><a href="https://youtu.be/0AFQ04Lj52c">Turn Up</a><br><a href="https://youtu.be/0AFQ04Lj52c">Turn Down</a><br></td><td style="vertical-align:middle"><a href="https://bit.ly/3627L0f" ><img width="60" src="pdf-icon-512.png" alt="Learn English Phrasal Verbs: Poster 002"/></a></td></tr>
 <tr><td><span style="color: #124292;">001</span></td><td>25<span class="superscript">th</span> Sep</td><td><a href="https://youtu.be/kkzQXQBHm3Q">A Basic</a><br><a href="https://youtu.be/kkzQXQBHm3Q">Introduction to</a><br><a href="https://youtu.be/kkzQXQBHm3Q">Phrasal Verbs</a><br></td><td>No poster</td></tr>
 <tr><td><span style="color: #124292;">000</span></td><td>25<span class="superscript">th</span> Sep</td><td><a href="https://youtu.be/K6lY1XawDOM">About Me,</a><br><a href="https://youtu.be/K6lY1XawDOM">This Channel,</a><br><a href="https://youtu.be/K6lY1XawDOM">and The Videos</a><br></td><td>No poster</td></tr>
 </table>
 <hr class="grey">
 <a name="playlists"></a><h2>PLAYLISTS</h2>
 <h4>THEMES</h4>
-<p><a href="https://www.youtube.com/playlist?list=PLGjNwsRMbl33sIzjcuvzKXkdCXB3n2fKF">2020</a> . <a href="https://www.youtube.com/playlist?list=PLGjNwsRMbl32UgwRUvN_0NQA-Z4tt4KGe">Reference</a> . <a href="https://www.youtube.com/playlist?list=PLGjNwsRMbl329t1WApodrMH3pXbQoSgqT">Food</a> . <a href="https://www.youtube.com/playlist?list=PLGjNwsRMbl3343F4Lscy6HPyw2Z-Rr2KN">Relationships</a></p>
+<p><a href="https://www.youtube.com/playlist?list=PLGjNwsRMbl32UgwRUvN_0NQA-Z4tt4KGe">Reference</a> . <a href="https://www.youtube.com/playlist?list=PLGjNwsRMbl329t1WApodrMH3pXbQoSgqT">Food</a> . <a href="https://www.youtube.com/playlist?list=PLGjNwsRMbl3343F4Lscy6HPyw2Z-Rr2KN">Relationships</a></p>
+<h4>YEAR PUBLISHED</h4>
+<p><a href="https://www.youtube.com/playlist?list=PLGjNwsRMbl33sIzjcuvzKXkdCXB3n2fKF">2020</a></p>
+
 <h4>MAIN VERBS</h4>
 <p><a href="https://www.youtube.com/playlist?list=PLGjNwsRMbl32lMrtfpChNxtZ4QQqBXzET">Turn</a></p>
 <hr class="grey">
 <a name="phrasalverbslist"></a><h2>PHRASAL VERBS LIST</h2>
-<p>Jump to a letter:<br><a href="#A">A</a>  <a href="#B">B</a>  <a href="#C">C</a>  <a href="#D">D</a>  <a href="#E">E</a>  <a href="#F">F</a> <a href="#G">G</a>  <a href="#H">H</a>  <a href="#I">I</a>  <a href="#J">J</a>  <a href="#K">K</a>  <a href="#L">L</a>  <a href="#M">M</a>  <a href="#N">N</a>  <a href="#O">O</a>  <a href="#P">P</a>  <a href="#Q">Q</a>  <a href="#R">R</a>  <a href="#S">S</a>  <a href="#T">T</a>  <a href="#U">U</a>  <a href="#V">V</a>  <a href="#W">W</a>  <a href="#X">X</a>  <a href="#Y">Y</a>  <a href="#Z">Z</a>  </p> 
+<p>Jump to a letter of the main verb:<br><a href="#A">A</a>  <a href="#B">B</a>  <a href="#C">C</a>  <a href="#D">D</a>  <a href="#E">E</a>  <a href="#F">F</a> <a href="#G">G</a>  <a href="#H">H</a>  <a href="#I">I</a>  <a href="#J">J</a>  <a href="#K">K</a>  <a href="#L">L</a>  <a href="#M">M</a>  <a href="#N">N</a>  <a href="#O">O</a>  <a href="#P">P</a>  <a href="#Q">Q</a>  <a href="#R">R</a>  <a href="#S">S</a>  <a href="#T">T</a>  <a href="#U">U</a>  <a href="#V">V</a>  <a href="#W">W</a>  <a href="#X">X</a>  <a href="#Y">Y</a>  <a href="#Z">Z</a>  </p> 
 <table class="w-full">
-<tr><th>Verb</th><th>Basic Defintion</th><th>Link to Video & Code</th></tr>
-<tr><td><A NAME="B"></a>Break Up With</td><td>To stop being in a romantic relationship.</td><td><a href="https://youtu.be/Ug2EKbfZWAA">004</a></td></tr>
-
-<tr><td><A NAME="C"></a>Cut Down on</td><td>To reduce the quantity of something.</td><td><a href="https://youtu.be/xBXb4oDXRuA">003</a></td></tr>
-<tr><td>Cut Out</td><td>To remove something completely.</td><td><a href="https://youtu.be/xBXb4oDXRuA">003</a></td></tr>
-<tr><td><A NAME="E"></a>Eat Out</td><td>To eat outside of the home, in a restaurant for example.</td><td><a href="https://youtu.be/xBXb4oDXRuA">003</a></td></tr>
-<tr><td><A NAME="F"></a>Fall Out With</td><td>To stop being friends with or being friendly with somebody.</td><td><a href="https://youtu.be/Ug2EKbfZWAA">004</a></td></tr>
-<tr><td><A NAME="G"></a>Get On With</td><td>To have a good or friendly relationship with somebody.</td><td><a href="https://youtu.be/Ug2EKbfZWAA">004</a></td></tr>
-<tr><td><A NAME="L"></a>Live On</td><td>To consume mostly one type of food.</td><td><a href="https://youtu.be/xBXb4oDXRuA">003</a></td></tr>
-<tr><td><A NAME="M"></a>Make Up With</td><td>To become friends with or being friendly with somebody after a period of non-friendship.</td><td><a href="https://youtu.be/Ug2EKbfZWAA">004</a></td></tr>
-<tr><td><A NAME="T"></a>Turn Down</td><td>To decrease the intensity, especially sound.</td><td><a href="https://youtu.be/0AFQ04Lj52c">002</a></td></tr>
-<tr><td>Turn Off</td><td>To stop a piece of equipment, for example electrical or plumbing.</td><td><a href="https://youtu.be/0AFQ04Lj52c">002</a></td></tr>
-<tr><td>Turn On</td><td>To start a piece of equipment, for example electrical or plumbing.</td><td><a href="https://youtu.be/0AFQ04Lj52c">002</a></td></tr>
-<tr><td>Turn Up</td><td>To increase the intensity, especially sound.</td><td><a href="https://youtu.be/0AFQ04Lj52c">002</a></td></tr>
+<tr><th>VERB</th><th>BASIC DEFINTION</th><th>VIDEO LINK<br>& CODE</th></tr>
+<tr><td><A NAME="B"></a>Break Up With</td><td><em>To stop being in a romantic relationship.</em></td><td><a href="https://youtu.be/Ug2EKbfZWAA">004</a></td></tr>
+<tr><td><A NAME="C"></a>Cut Down on</td><td><em>To reduce the quantity of something.</em></td><td><a href="https://youtu.be/xBXb4oDXRuA">003</a></td></tr>
+<tr><td>Cut Out</td><td><em>To remove something completely.</em></td><td><a href="https://youtu.be/xBXb4oDXRuA">003</a></td></tr>
+<tr><td><A NAME="E"></a>Eat Out</td><td><em>To eat outside of the home, in a restaurant for example.</em></td><td><a href="https://youtu.be/xBXb4oDXRuA">003</a></td></tr>
+<tr><td><A NAME="F"></a>Fall Out With</td><td><em>To stop being friends with or being friendly with somebody.</em></td><td><a href="https://youtu.be/Ug2EKbfZWAA">004</a></td></tr>
+<tr><td><A NAME="G"></a>Get On With</td><td><em>To have a good or friendly relationship with somebody.</em></td><td><a href="https://youtu.be/Ug2EKbfZWAA">004</a></td></tr>
+<tr><td><A NAME="L"></a>Live On</td><td><em>To consume mostly one type of food.</em></td><td><a href="https://youtu.be/xBXb4oDXRuA">003</a></td></tr>
+<tr><td><A NAME="M"></a>Make Up With</td><td><em>To become friends with or being friendly with somebody after a period of non-friendship.</em></td><td><a href="https://youtu.be/Ug2EKbfZWAA">004</a></td></tr>
+<tr><td><A NAME="T"></a>Turn Down</td><td><em>To decrease the intensity, especially sound.</em></td><td><a href="https://youtu.be/0AFQ04Lj52c">002</a></td></tr>
+<tr><td>Turn Off</td><td><em>To stop a piece of equipment, for example electrical or plumbing.</em></td><td><a href="https://youtu.be/0AFQ04Lj52c">002</a></td></tr>
+<tr><td>Turn On</td><td><em>To start a piece of equipment, for example electrical or plumbing.</em></td><td><a href="https://youtu.be/0AFQ04Lj52c">002</a></td></tr>
+<tr><td>Turn Up</td><td><em>To increase the intensity, especially sound.</em></td><td><a href="https://youtu.be/0AFQ04Lj52c">002</a></td></tr>
 </table>
 </r-cell>
 </r-grid>
@@ -134,7 +136,11 @@ videolinks[0]="https://youtu.be/K6lY1XawDOM";
 videolinks[1]="https://youtu.be/kkzQXQBHm3Q";
 videolinks[2]="https://youtu.be/0AFQ04Lj52c";
 videolinks[3]="https://youtu.be/xBXb4oDXRuA";
-videolinks[4]="https://youtu.be/xBXb4oDXRuA";
+videolinks[4]="https://youtu.be/Ug2EKbfZWAA";
+videolinks[5]="https://youtu.be/NR6uvgMb1Gc";
+videolinks[6]="https://youtu.be/IcI049Yr63I";
+videolinks[7]="https://youtu.be/_aHY30FL3aI";
+
 function randomvideo(){
 window.location=videolinks[Math.floor(Math.random()*videolinks.length)]
 }
