--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <li><a href="#videolist">VIDEO LIST</a></li>
 <li><a href="#playlists">PLAYLISTS</a></li>
 <li><a href="#phrasalverbslist">PHRASAL VERBS LIST</a></li>
-<li><a href="javascript:randomvideo()" alt="[opens a random 4PV video on YouTube]" title="[opens a random 4PV video on YouTube]">FEELING LUCKY?</a><br>[Open a random 4PV video]</li>
+<li><a href="javascript:randomvideo()" alt="[opens a random 4PV video on YouTube]" title="[opens a random 4PV video on YouTube]">FEELING LUCKY?</a><br>[Opens a random 4PV video]</li>
 </ul>
 <hr class="grey">
 <h3 style="margin-bottom: -5px;">SOCIAL MEDIA</h3>
