Added videos 005,007,008 to the verb list

--- a/index.html
+++ b/index.html
@@ -84,7 +84,10 @@
 <a name="videolist"></a><h2>VIDEO LIST</h2>
 <table class="w-full" style="vertical-align:middle">
 <tr><th>Video Code</th><th>Published</th><th>Phrasal verbs covered<br>and link to the video</th><th>Poster</th></tr>
+
 <tr><td style="vertical-align:middle"><span style="color: #124292;">008</span></td><td style="vertical-align:middle">07<span class="superscript">th</span> Nov</td><td style="vertical-align:middle"><a href="https://youtu.be/pPkILt2K6GI">Put Up With</a><br><a href="https://youtu.be/pPkILt2K6GI">Get Through</a><br><a href="https://youtu.be/pPkILt2K6GI">Deal With</a><br><a href="https://youtu.be/pPkILt2K6GI">Resign To</a></td><td style="vertical-align:middle" ><a href="https://bit.ly/3k689jE" ><img width="60" src="pdf-icon-512.png" alt="Learn English Phrasal Verbs: Poster 008"/></a></td></tr>
+
+
 <tr><td style="vertical-align:middle"><span style="color: #124292;">007</span></td><td style="vertical-align:middle">31<span class="superscript">st</span> Oct</td><td style="vertical-align:middle"><a href="https://youtu.be/_aHY30FL3aI">Look Up To</a><br><a href="https://youtu.be/_aHY30FL3aI">Look Down On</a><br><a href="https://youtu.be/_aHY30FL3aI">Look Forward To</a><br><a href="https://youtu.be/_aHY30FL3aI">Look Through</a></td><td style="vertical-align:middle" ><a href="https://bit.ly/38478WQ" ><img width="60" src="pdf-icon-512.png" alt="Learn English Phrasal Verbs: Poster 007"/></a></td></tr>
 <tr><td style="vertical-align:middle"><span style="color: #124292;">006</span></td><td style="vertical-align:middle">23<span class="superscript">rd</span> Oct</td><td style="vertical-align:middle"><a href="https://youtu.be/IcI049Yr63I">QUAD QUIZ ONE</a></td><td>No poster</td></tr>
 <tr><td style="vertical-align:middle"><span style="color: #124292;">005</span></td><td style="vertical-align:middle">16<span class="superscript">th</span> Oct</td><td style="vertical-align:middle"><a href="https://youtu.be/NR6uvgMb1Gc">Figure Out</a><br><a href="https://youtu.be/NR6uvgMb1Gc">Focus On</a><br><a href="https://youtu.be/NR6uvgMb1Gc">Run Into</a><br><a href="https://youtu.be/NR6uvgMb1Gc">Sort Out</a></td><td style="vertical-align:middle"><a href="https://bit.ly/3mNRWkN" ><img width="60" src="pdf-icon-512.png" alt="Learn English Phrasal Verbs: Poster 005"/></a></td></tr>
@@ -108,18 +111,30 @@
 <p>Jump to a letter of the main verb:<br><a href="#A">A</a>  <a href="#B">B</a>  <a href="#C">C</a>  <a href="#D">D</a>  <a href="#E">E</a>  <a href="#F">F</a> <a href="#G">G</a>  <a href="#H">H</a>  <a href="#I">I</a>  <a href="#J">J</a>  <a href="#K">K</a>  <a href="#L">L</a>  <a href="#M">M</a>  <a href="#N">N</a>  <a href="#O">O</a>  <a href="#P">P</a>  <a href="#Q">Q</a>  <a href="#R">R</a>  <a href="#S">S</a>  <a href="#T">T</a>  <a href="#U">U</a>  <a href="#V">V</a>  <a href="#W">W</a>  <a href="#X">X</a>  <a href="#Y">Y</a>  <a href="#Z">Z</a>  </p> 
 <table class="w-full">
 <tr><th>VERB</th><th>BASIC DEFINTION</th><th>VIDEO LINK<br>& CODE</th></tr>
-<tr><td><A NAME="B"></a>Break Up With</td><td><em>To stop being in a romantic relationship.</em></td><td><a href="https://youtu.be/Ug2EKbfZWAA">004</a></td></tr>
-<tr><td><A NAME="C"></a>Cut Down on</td><td><em>To reduce the quantity of something.</em></td><td><a href="https://youtu.be/xBXb4oDXRuA">003</a></td></tr>
-<tr><td>Cut Out</td><td><em>To remove something completely.</em></td><td><a href="https://youtu.be/xBXb4oDXRuA">003</a></td></tr>
-<tr><td><A NAME="E"></a>Eat Out</td><td><em>To eat outside of the home, in a restaurant for example.</em></td><td><a href="https://youtu.be/xBXb4oDXRuA">003</a></td></tr>
-<tr><td><A NAME="F"></a>Fall Out With</td><td><em>To stop being friends with or being friendly with somebody.</em></td><td><a href="https://youtu.be/Ug2EKbfZWAA">004</a></td></tr>
-<tr><td><A NAME="G"></a>Get On With</td><td><em>To have a good or friendly relationship with somebody.</em></td><td><a href="https://youtu.be/Ug2EKbfZWAA">004</a></td></tr>
-<tr><td><A NAME="L"></a>Live On</td><td><em>To consume mostly one type of food.</em></td><td><a href="https://youtu.be/xBXb4oDXRuA">003</a></td></tr>
-<tr><td><A NAME="M"></a>Make Up With</td><td><em>To become friends with or being friendly with somebody after a period of non-friendship.</em></td><td><a href="https://youtu.be/Ug2EKbfZWAA">004</a></td></tr>
-<tr><td><A NAME="T"></a>Turn Down</td><td><em>To decrease the intensity, especially sound.</em></td><td><a href="https://youtu.be/0AFQ04Lj52c">002</a></td></tr>
-<tr><td>Turn Off</td><td><em>To stop a piece of equipment, for example electrical or plumbing.</em></td><td><a href="https://youtu.be/0AFQ04Lj52c">002</a></td></tr>
-<tr><td>Turn On</td><td><em>To start a piece of equipment, for example electrical or plumbing.</em></td><td><a href="https://youtu.be/0AFQ04Lj52c">002</a></td></tr>
-<tr><td>Turn Up</td><td><em>To increase the intensity, especially sound.</em></td><td><a href="https://youtu.be/0AFQ04Lj52c">002</a></td></tr>
+<tr><td><a name="B"></a>Break up with</td><td><em>To stop being in a romantic relationship.</em></td><td><a href="https://youtu.be/Ug2EKbfZWAA">004</a></td></tr>
+<tr><td><a name="C"></a>Cut down on</td><td><em>To reduce the quantity of something.</em></td><td><a href="https://youtu.be/xBXb4oDXRuA">003</a></td></tr>
+<tr><td>Cut out</td><td><em>To remove something completely.</em></td><td><a href="https://youtu.be/xBXb4oDXRuA">003</a></td></tr>
+<tr><td><a name="D"></a>Deal with</td><td><em>To take action to do something, especially solve a problem.</em></td><td><a href="https://youtu.be/pPkILt2K6GI">008</a></td></tr>
+<tr><td><a name="E"></a>Eat out</td><td><em>To eat outside of the home, in a restaurant for example.</em></td><td><a href="https://youtu.be/xBXb4oDXRuA">003</a></td></tr>
+<tr><td><a name="F"></a>Fall out with</td><td><em>To stop being friends with or being friendly with somebody.</em></td><td><a href="https://youtu.be/Ug2EKbfZWAA">004</a></td></tr>
+<tr><td>Figure out</td><td><em>To understand or solve a problem.</em></td><td><a href="https://youtu.be/NR6uvgMb1Gc">005</a></td></tr>
+<tr><td>Focus on</td><td><em>To concentrate on or put effort into something.</em></td><td><a href="https://youtu.be/NR6uvgMb1Gc">005</a></td></tr>
+<tr><td><a name="G"></a>Get on with</td><td><em>To have a good or friendly relationship with somebody.</em></td><td><a href="https://youtu.be/Ug2EKbfZWAA">004</a></td></tr>
+<tr><td>Get through</td><td><em>To experience and survive a difficult situation.</em></td><td><a href="https://youtu.be/pPkILt2K6GI">008</a></td></tr>
+<tr><td><a name="L"></a>Live on</td><td><em>To consume mostly one type of food.</em></td><td><a href="https://youtu.be/xBXb4oDXRuA">003</a></td></tr>
+<tr><td>Look down on</td><td><em>To feel superior to somebody.</em></td><td><a href="https://youtu.be/_aHY30FL3aI">007</a></td></tr>
+<tr><td>Look forward to</td><td><em>To anticpate the future with pleasure or excitement.</em></td><td><a href="https://youtu.be/_aHY30FL3aI">007</a></td></tr>
+<tr><td>Look up to</td><td><em>To admire or respect.</em></td><td><a href="https://youtu.be/_aHY30FL3aI">007</a></td></tr>
+<tr><td>Look through</td><td><em>To review or search.</em></td><td><a href="https://youtu.be/_aHY30FL3aI">007</a></td></tr>
+<tr><td><a name="M"></a>Make up with</td><td><em>To become friends with or being friendly with somebody after a period of non-friendship.</em></td><td><a href="https://youtu.be/Ug2EKbfZWAA">004</a></td></tr>
+<tr><td><a name="P"></a>Put up with</td><td><em>To accept an unpleasant situation.</em></td><td><a href="https://youtu.be/pPkILt2K6GI">008</a></td></tr>
+<tr><td><a name="R"></a>Resign to</td><td><em>To accept a situation that can't be changed, probably a negative situation.</em></td><td><a href="https://youtu.be/pPkILt2K6GI">008</a></td></tr>
+<tr><td>Run into</td><td><em>To encounter by chance, with no planning.</em></td><td><a href="https://youtu.be/NR6uvgMb1Gc">005</a></td></tr>
+<tr><td><a name="S"></a>Sort out</td><td><em>To organise, filter or control.</em></td><td><a href="https://youtu.be/NR6uvgMb1Gc">005</a></td></tr>
+<tr><td><a name="T"></a>Turn down</td><td><em>To decrease the intensity, especially sound.</em></td><td><a href="https://youtu.be/0AFQ04Lj52c">002</a></td></tr>
+<tr><td>Turn off</td><td><em>To stop a piece of equipment, for example electrical or plumbing.</em></td><td><a href="https://youtu.be/0AFQ04Lj52c">002</a></td></tr>
+<tr><td>Turn on</td><td><em>To start a piece of equipment, for example electrical or plumbing.</em></td><td><a href="https://youtu.be/0AFQ04Lj52c">002</a></td></tr>
+<tr><td>Turn up</td><td><em>To increase the intensity, especially sound.</em></td><td><a href="https://youtu.be/0AFQ04Lj52c">002</a></td></tr>
 </table>
 </r-cell>
 </r-grid>
